编码实现new、let、const

--- a/src/interview/必知必会之编码篇.md
+++ b/src/interview/必知必会之编码篇.md
@@ -1,29 +1,37 @@
-## 造轮子
+## 必知必会之编码篇
 
-### `Array.prototype.map` ?
+### 实现 new
 
-- 方法创建一个新数组，其结果是该数组中的每个元素都调用一个提供的函数后返回的结果
+- new 做了什么？
+
+  1. 创建了一个全新的对象。
+  2. 对象的 `__proto__` 指向源函数的原型 `prototype`。
+  3. 生成的新对象会绑定到函数调用的 this 上下文。
+  4. 如果函数没有返回对象类型 Object(包含 Functoin, Array, Date, RegExg, Error)，那么 new 表达式中的函数调用会自动返回这个新的对象。
+
+- 编码
 
 ```javascript
+function _new(target) {
+  if (typeof target !== "function")
+    throw new TypeError("target must be a function");
+
+  // 1. 创建一个全新的对象
+  var obj = {};
+  // 2. __proto__ 指向对象原型
+  obj.__proto__ = target.prototype;
+  // 3. 绑定上下文到 obj
+  var result = target.apply(obj, Array.prototype.slice.call(arguments, 1));
+
+  // 4.如果该函数没有返回对象，则返回新创建的对象
+  var isObject = typeof result === "object" && result !== null;
+  var isFunction = typeof result === "function";
+
+  return isObject || isFunction ? result : obj;
+}
 ```
 
-### `Array.prototype.filter` ?
-
-- 方法创建一个新数组, 其包含通过所提供函数实现的测试的所有元素。
-
-### `Array.prototype.reduce` ?
-
-- 方法对数组中的每个元素执行一个由您提供的 `reducer` 函数(升序执行)，将其结果汇总为单个返回值
-
-### `let` ?
-
-> 如何在 ES5 环境下实现 let
-
-### `const` ?
-
-### `new` ?
-
-### `call` ?
+### 实现 call
 
 - 定义：`call` 是属于所有 `Function` 的方法，也就是 `Function.prototype.call`。
 
@@ -53,7 +61,7 @@ fun.call(thisArg[,arg1[,arg2,…]]);
 - 实现
 
 ```javascript
-Function.prototype.newCall = function (thisArg) {
+Function.prototype._call = function (thisArg) {
   // 如果 引用对象不合法 则抛出异常
   if (typeof this !== "function")
     throw new TypeError(this + " is not a function");
@@ -77,7 +85,7 @@ Function.prototype.newCall = function (thisArg) {
 };
 ```
 
-### `apply` ?
+### 实现 apply
 
 - 定义：`apply` 也是属于所有 `Function` 的方法，也就是 `Function.prototype.apply`。
 - 语法
@@ -118,7 +126,7 @@ fun.apply(thisArg, [argsArray]);
   > 在外面传入的 thisArg 值会修改并成为 this 值。thisArg 是 undefined 或 null 时它会被替换成全局对象，所有其他值会被应用 ToObject 并将结果作为 this 值，这是第三版引入的更改。
 
 ```javascript
-Function.prototype.newApply = function (thisArg, argsArray) {
+Function.prototype._apply = function (thisArg, argsArray) {
   // 如果 引用对象不合法 则抛出异常
   if (typeof this !== "function")
     throw new TypeError(this + " is not a function");
@@ -142,7 +150,7 @@ Function.prototype.newApply = function (thisArg, argsArray) {
 };
 ```
 
-### `Function.prototype.bind` ?
+### 实现 bind
 
 - 定义：`bind()` 创建一个新的函数，在新创建的函数中的 `this` 为 `bind` 传入的第一个参数，之后的参数作为新函数的参数供其调用；
 - 语法
@@ -160,7 +168,7 @@ fun.bind(thisArg[, arg1[, arg2[, ...]]])
 - 编码实现
 
 ```javascript
-Function.prototype.newBind = function (thisArg) {
+Function.prototype._bind = function (thisArg) {
   // 如果 引用对象不合法 则抛出异常
   if (typeof this !== "function")
     throw new TypeError(this + " is not a function");
@@ -185,6 +193,41 @@ Function.prototype.newBind = function (thisArg) {
   this.prototype && (fn.prototype = this.prototype);
   return newFunc;
 };
+```
+
+### 实现 let
+
+> let 定义一个仅作用于该代码块的变量，我们用闭包的形式来定义一个不被污染的变量
+
+```javascript
+(function () {
+  var a = 1;
+  console.log(a); // 1
+})();
+console.log(a); // a is not defined
+```
+
+### 实现 const
+
+```javascript
+function _const(key, value) {
+  // 由于ES5环境没有block的概念，所以是无法百分百实现const，只能是挂载到某个对象下，要么是全局的window，要么就是自定义一个object来当容器
+  window[key] = value;
+  Object.defineProperty(window, key, {
+    enumerable: false,
+    configurable: false,
+    get: function () {
+      return value;
+    },
+    set: function (newValue) {
+      if (newValue !== value) {
+        throw TypeError("只读变量，不可修改");
+      } else {
+        return value;
+      }
+    },
+  });
+}
 ```
 
 ### 防抖函数
