--- a/src/arithmetic/week1-array/删除排序数组中的重复项.md
+++ b/src/arithmetic/week1-array/删除排序数组中的重复项.md
@@ -62,23 +62,21 @@ var removeDuplicates = function (nums) {
 ### 思路：遍历，使用对象缓存之前值的映射，然后校验是否已存在，则删除
 ```javascript
 var removeDuplicates = function (nums) {
-  // 判空 好习惯
-  if (!nums || !nums.length) return 0;
+  if (!nums) return 0;
 
-  var mapping = {};
-  for (var i = 0; i < nums.length; i++) {
-    // 校验值是否存在
-    if (mapping[nums[i]]) {
-      // 删除原数组数据
-      nums.splice(i, 1);
-      // 索引减 1
-      i--;
+  if (nums.length === 1) return 1;
+
+  var j = 0;
+  for (var i = 1; i < nums.length; i++) {
+    // 重复则下一个
+    if (nums[i] === nums[j]) {
+      continue;
     }
-    // 缓存值的映射
-    mapping[nums[i]] = true;
+    // 否则记录
+    nums[++j] = nums[i];
   }
 
-  return nums.length;
+  return j + 1;
 };
 ```
 
