--- a/src/interview/必知必会之基础篇.md
+++ b/src/interview/必知必会之基础篇.md
@@ -1,4 +1,47 @@
-## 必知必会之基础篇
+> 基础拾遗，最近收藏的 32 道面试题，偏 JavaScript 基础篇，很多大厂最终考察的往往都是基础的细节，希望能在往后面试中帮到大家；
+>
+> 近期自己也实践了几个编码常考题目，希望能够帮助大家加深理解：
+> 1. [ES5 实现 new](https://juejin.im/post/5efa1a10f265da23016c5a4b#heading-0)
+> 2. [ES5 实现 let/const](https://juejin.im/post/5efa1a10f265da23016c5a4b#heading-4)
+> 3. [ES5 实现 call/apply/bind](https://juejin.im/post/5efa1a10f265da23016c5a4b#heading-1)
+> 4. [ES5 实现 防抖和节流函数](https://juejin.im/post/5efa1a10f265da23016c5a4b#heading-6)
+> 5. [如何实现一个通过 Promise/A+ 规范的 Promise](https://juejin.im/post/5ecfc732e51d4578801675ee)
+
+### 题目概览
+1. `undefined` 和 `null` 有什么区别？
+2. `&&`(逻辑与) `||` (逻辑或)运算符能做什么？
+3. 使用 + 或一元加运算符是将字符串转换为数字的最快方法吗？
+4. 什么是事件传播?
+5. `event.preventDefault()` 和 `event.stopPropagation()`方法之间有什么区别？
+6. `event.target` 与 `event.currentTarget` 的区别？
+7. `==` 和 `===` 有什么区别？
+8. 提升？
+9. 作用域？
+10. 闭包？
+11. 'use strict' 是干嘛用的？
+12. prototype？
+13. IIFE?
+14. `Function.prototype.apply` 与 `Function.prototype.call` 的异同?
+15. 函数式编程(FP)?
+16. `arguments` ?
+17. 如何创建一个没有 `prototype(原型)`的对象？
+18. 连 `=` 声明的理解？
+19. `var`、`let`、`const` 的区别？
+20. 箭头函数 `=>` ?
+21. 包装对象（wrapper object）？
+22. `NaN`?
+23. 数组检测？
+24. 如何在不使用`%`模运算符的情况下检查一个数字是否是偶数？
+25. 检测对象中存在某个属性
+26. AJAX?
+27. js 中创建对象？
+28. `const`、`Object.seal` 和 `Object.freeze` 区别？
+29. `函数表达式`和`函数声明`之间有什么区别？
+30. `typeof null`?
+31. `new` 做了什么?
+32. 什么时候不使用箭头函数?
+
+### 题目详解
 
 1. `undefined` 和 `null` 有什么区别？
 
@@ -31,7 +74,7 @@ undefined === null; // false
   - 没有显示返回值的函数;
   - 对象中不存在的属性;
 
-  ```javascript
+```javascript
   var a;
   var b = function () {};
   var c = {};
@@ -39,11 +82,11 @@ undefined === null; // false
   console.log(a); // undefined
   console.log(b()); // undefined
   console.log(c.d); // undefined
-  ```
+```
 
   - `null` 是 `不代表任何值的值`，是已明确定义给变量的值
 
-2. `&&`(逻辑与) `|| (逻辑或)`运算符能做什么？
+2. `&&`(逻辑与) `|| `(逻辑或)运算符能做什么？
 
 - `&&`
   - 在其操作数中找到第一个`虚值表达式`并返回它，如果没有找到任何虚值，返回其最后一个真值表达式
@@ -90,14 +133,7 @@ null + // 0
   }; //NaN
 ```
 
-4. DOM 是什么？
-
-- `文档对象模型`，是 `HTML` 和 `XML` 文档的接口(`API`)
-  - 当浏览器第一次读取(解析)`HTML` 文档时，它会创建一个大对象(`window.document`)，一个基于 `HTML` 文档的非常大的对象，这就是 `DOM`。
-  - 它是一个从 `HTML` 文档中建模的树状结构。
-  - `DOM` 用于交互和修改 `DOM` 结构或特定元素或节点。
-
-5. 什么是事件传播?
+4. 什么是事件传播?
 
 - 当事件发生在 `DOM` 元素上时，该事件并不完全发生在那个元素上。在`“冒泡阶段”`中，事件冒泡或`向上`传播至父级，祖父母，祖父母或父级，直到到达 `window` 为止；
 - 而在`“捕获阶段”`中，该事件并不完全发生在那个元素上，事件从 `window` 开始`向下`触发元素、事件或 `event.target`。
@@ -105,8 +141,6 @@ null + // 0
   - `捕获阶段`: 事件从 window 开始，然后向下到每个元素，直到到达目标元素;
   - `目标阶段`: 事件已达到目标元素;
   - `冒泡阶段`: 事件从目标元素冒泡，然后上升到每个元素，直到到达 `window`;
-
-> 下述 `HTML` 结构：
 
 ```html
 <div class="grandparent">
@@ -160,13 +194,13 @@ addEvent(document, "DOMContentLoaded", () => {
 > 如果单击 `child` 元素，它将分别在控制台上打印 `window`，`document`，`html`，`grandparent` 和 `parent`，这就是`事件捕获`。\
 > 如果单击 `child` 元素，它将分别在控制台上记录 `child`，`parent`，`grandparent`，`html`，`document` 和 `window`，这就是事件冒泡。
 
-6. `event.preventDefault()` 和 `event.stopPropagation()`方法之间有什么区别？
+5. `event.preventDefault()` 和 `event.stopPropagation()`方法之间有什么区别？
 
 - `event.preventDefault()` 方法可防止元素的默认行为。如果在表单元素中使用，它将阻止其提交。如果在锚元素中使用，它将阻止其导航。如果在上下文菜单中使用，它将阻止其显示或显示。
   - 我们可以在事件对象中使用`event.defaultPrevented`属性。它返回一个布尔值用来表明是否在特定元素中调用了 `event.preventDefault()`。
 - `event.stopPropagation()` 方法用于阻止捕获和冒泡阶段中当前事件的进一步传播。
 
-7. `event.target` 与 `event.currentTarget` 的区别？
+6. `event.target` 与 `event.currentTarget` 的区别？
 
 - `event.target`： 是发生事件的元素或触发事件的元素。
 - `event.currentTarget`： 是我们在其上显式附加事件处理程序的元素。
@@ -178,7 +212,7 @@ addEvent(document, "DOMContentLoaded", () => {
 </div>
 ```
 
-8. `==` 和 `===` 有什么区别？
+7. `==` 和 `===` 有什么区别？
 
 - `==` 一般比较，在比较的时候可以转换数据类型，假定 `x == y` 表达式：
 
@@ -191,7 +225,7 @@ addEvent(document, "DOMContentLoaded", () => {
 
 - `===` 严格比较，只要类型不匹配就返回 `false`;
 
-9. 提升？
+8. 提升？
 
 - `提升`：是用来描述变量和函数移动到其（全局或者函数）作用域顶部的术语；
 - `执行上下文`：是当前正在执行的代码环境，包含`编译`和`执行`两个阶段；
@@ -199,7 +233,7 @@ addEvent(document, "DOMContentLoaded", () => {
     - 只有使用 `var` 声明的变量，或者函数声明才会被提升，相反，函数表达式或箭头函数，`let` 和 `const` 声明的变量，这些都不会被提升。
   - `执行`：在这个阶段中，它将值赋给之前提升的变量，并执行或调用函数(对象中的方法)。
 
-10. 作用域？
+9. 作用域？
 
 - `作用域`：是我们可以有效访问变量或函数的区域，包含`全局作用域`、`函数作用域`、`块级作用域（ES6）` 三种；
 - `全局作用域`：在全局命名空间中声明的变量或函数位于全局作用域中，因此在代码中的任何地方都可以访问它们。
@@ -207,7 +241,7 @@ addEvent(document, "DOMContentLoaded", () => {
 - `块级作用域`：在块`{}`中声明的变量（`let`，`const`）只能在其中访问。
 - `作用域链`：作用域也是一组用于查找变量的规则。如果变量在当前作用域中不存在，它将向外部作用域中查找并搜索，如果该变量不存在，它将再次查找直到到达全局作用域，如果找到，则可以使用它，否则引发错误，这种查找过程也称为作用域链。
 
-11. 闭包？
+10. 闭包？
 
 - `闭包`：就是一个函数在声明时能够记住当前作用域、父函数作用域、及父函数作用域上的变量和参数的`引用`，直至通过作用域链上全局作用域，基本上闭包是在声明函数时创建的作用域。
 
@@ -245,9 +279,9 @@ for (let i = 0; i < 5; i++) {
 }
 ```
 
-12. 'use strict' 是干嘛用的？
+11. 'use strict' 是干嘛用的？
 
-- `use strict` 是 `ES5` 特性，它使我们的代码在函数或整个脚本中处于严格模式。严格模式帮助我们在代码的早期避免 `bug`，并为其添加限制。
+> `use strict` 是 `ES5` 特性，它使我们的代码在函数或整个脚本中处于严格模式。严格模式帮助我们在代码的早期避免 `bug`，并为其添加限制。
   - 变量必须声明后再使用
   - 函数的参数不能有同名属性，否则报错
   - 不能使用 `with` 语句
@@ -264,12 +298,12 @@ for (let i = 0; i < 5; i++) {
   - 不能使用 `fn.caller` 和 `fn.arguments` 获取函数调用的堆栈
   - 增加了保留字（比如 `protected`、`static` 和 `interface`）
 
-13. prototype？
+12. prototype？
 
 - `prototype（原型）`：对象之间共享属性和功能的方法，这也是 JavaScript 实现继承的核心。
 - 当对象中不存在属性时，它将查看其原型，如果仍然不存在，则将其查找到原型的原型，依此类推，直到在原型链中找到具有相同属性的属性为止。原型链的末尾是 `Object.prototype`
 
-14. IIFE?
+13. IIFE?
 
 - `IIFE(立即调用的函数表达式)`：是在创建或声明后将被调用或执行的函数。
 
@@ -331,7 +365,7 @@ for (var i = 0, len = li.length; i < len; i++) {
 }
 ```
 
-15. `Function.prototype.apply` 与 `Function.prototype.call` 的异同?
+14. `Function.prototype.apply` 与 `Function.prototype.call` 的异同?
 
 - `apply`：方法调用一个具有给定 `this` 值的函数，以及作为一个数组（或类似数组对象）提供的参数。
 - `call`：方法使用一个指定的 `this` 值和单独给出的一个或多个参数来调用一个函数。
@@ -350,7 +384,7 @@ greeting.call(person, "Hello"); // "Hello Bob!"
 greeting.apply(person, ["Hello"]); // "Hello Bob!"
 ```
 
-16. 函数式编程(FP)?
+15. 函数式编程(FP)?
 
 - 函数式编程（FP）：通过编写纯函数，避免`共享状态`、`可变数据`、`副作用`来构建软件的过程。
 - 函数式编程是`声明式`的而不是命令式 的，应用程序的状态是通过纯函数流动的。与面向对象编程形成对比，面向对象中应用程序的状态通常与对象中的方法共享和共处。
@@ -363,7 +397,7 @@ function hoc(param, callback) {
 }
 ```
 
-17. `arguments` ?
+16. `arguments` ?
 
 - `arguments` 对象是函数中传递的参数值的集合。它是一个类似数组的对象，因为它有一个 `length` 属性，我们可以使用数组索引表示法 `arguments[1]`来访问单个值，但它没有数组中的内置方法，如：`forEach`、`reduce`、`filter` 和 `map`。
 - 使用`Array.prototype.slice`将 `arguments` 对象转换成一个数组
@@ -377,7 +411,7 @@ function demo() {
 
 - `箭头函数`中没有 `arguments` 对象
 
-18. 如何创建一个没有 `prototype(原型)`的对象？
+17. 如何创建一个没有 `prototype(原型)`的对象？
 
 - `Object.create` 方法可以创建没有原型的对象
 
@@ -390,7 +424,7 @@ console.log(o2.toString());
 // throws an error o2.toString is not a function
 ```
 
-19. 连 `=` 声明的理解？
+18. 连 `=` 声明的理解？
 
 - 赋值运算符是从右向左求值的
 
@@ -410,7 +444,7 @@ function func() {
 }
 ```
 
-20. `var`、`let`、`const` 的区别？
+19. `var`、`let`、`const` 的区别？
 
 - `var` 声明的变量会挂载到 `window`，而 `let`、`const`则不会;
 
@@ -493,7 +527,7 @@ if (1) {
   - 声明后不能再修改
   - 如果声明的是复合类型数据，可以修改其属性
 
-21. 箭头函数 `=>` ?
+20. 箭头函数 `=>` ?
 
 - `=>`：箭头函数表达式的语法比函数表达式更简洁，并且没有自己的 `this`，`arguments`，`super` 或 `new.target`。箭头函数表达式更适用于那些本来需要匿名函数的地方，并且它不能用作构造函数。
 
@@ -517,7 +551,7 @@ const data = {
 };
 ```
 
-22. 包装对象（wrapper object）？
+21. 包装对象（wrapper object）？
 
 - js 分为两大数据类型：基本类型和引用类型
   - 基本类型：`null`,`undefined`,`boolean`,`number`,`string`,`symbol`,`bigint`
@@ -537,7 +571,7 @@ console.log(name.toUpperCase()); // "BOB"
 console.log(new String(name).toUpperCase());
 ```
 
-23. `NaN`?
+22. `NaN`?
 
 - `NaN`表示“非数字”是 JS 中的一个值，该值是将数字转换或执行为非数字值的运算结果，因此结果为 `NaN`
 
@@ -572,13 +606,13 @@ function checkNaN(val) {
 }
 ```
 
-24. 数组检测？
+23. 数组检测？
 
 - ES6 `Array.isArray`
 - `Object.prototype.toString().call(value) === '[object Array]'`
 - `value instanceof Array`
 
-25. 如何在不使用`%`模运算符的情况下检查一个数字是否是偶数？
+24. 如何在不使用`%`模运算符的情况下检查一个数字是否是偶数？
 
 - `&` 位运算，进行二进制转换后运算
 
@@ -598,13 +632,13 @@ function isEven(num) {
 }
 ```
 
-26. 检测对象中存在某个属性
+25. 检测对象中存在某个属性
 
 - `prop in obj`：返回布尔值，指示指定的属性在指定的对象或其原型链中；
 - `obj.hasOwnProperty(prop)`：返回布尔值，指示对象自身属性中是否具有指定的属性，因此这个方法会忽略掉那些从原型链上继承到的属性；
 - `obj["prop"]`：读取属性值，存在则返回值，否则返回 `undefined`；
 
-27. AJAX?
+26. AJAX?
 
 - `AJAX`：异步的 `JavaScript` 和 `XML`，是一种用于创建快速动态网页的技术，传统的网页（不使用 `AJAX`）如果需要更新内容，必需重载整个网页面。使用 `AJAX` 则不需要加载更新整个网页，实现部分内容更新
 
@@ -615,19 +649,19 @@ function isEven(num) {
   - `XMLHttpRequest API` - 用于从服务器发送和获取数据
   - `PHP`，`Python`，`Nodejs` - 某些服务器端语言
 
-28. js 中创建对象？
+27. js 中创建对象？
 
 - `对象字面量`, `var a = {}`;
 - `构造函数`, `function a(){} var o = new a()`;
 - `Object.create`
 
-29. `const`、`Object.seal` 和 `Object.freeze` 区别？
+28. `const`、`Object.seal` 和 `Object.freeze` 区别？
 
 - `Object.seal`：方法封闭一个对象，阻止添加新属性并将所有现有属性标记为不可配置。当前属性的值只要可写就可以改变。
 - `Object.freeze`：方法可以冻结一个对象。一个被冻结的对象再也不能被修改；冻结了一个对象则不能向这个对象添加新的属性，不能删除已有属性，不能修改该对象已有属性的可枚举性、可配置性、可写性，以及不能修改已有属性的值。此外，冻结一个对象后该对象的原型也不能被修改。`freeze()` 返回和传入的参数相同的对象。
 - `const`： 声明一个只读的变量，一旦声明，常量的值就不可改变；
 
-30. `函数表达式`和`函数声明`之间有什么区别？
+29. `函数表达式`和`函数声明`之间有什么区别？
 
 ```javascript
 a();
@@ -642,11 +676,11 @@ var b = function () {
 };
 ```
 
-31. `typeof null`?
+30. `typeof null`?
 
 - `typeof null === 'object'`：自 JS 诞生以来 null 的实现。曾经有人提出将`typeof null == 'object'`修改为`typeof null == 'null'`，但是被拒绝了，因为这将导致更多的`bug`。
 
-32. `new` 做了什么?
+31. `new` 做了什么?
 
 - `new` 关键字与构造函数一起使用以创建对象，主要做了 4 件事:
   - 创建空对象 `{}`
@@ -654,7 +688,7 @@ var b = function () {
   - 将空对象的 `proto` 指向构造函数的 `prototype`
   - 如果没有使用显式 `return` 语句，则返回 `this`
 
-33. 什么时候不使用箭头函数?
+32. 什么时候不使用箭头函数?
 
 - 当想要函数被提升时(箭头函数是匿名的)
 - 要在函数中使用 `this`/`arguments` 时，由于箭头函数本身不具有 `this`/`arguments`，因此它们取决于外部上下文
@@ -662,3 +696,5 @@ var b = function () {
 - 使用函数作为构造函数时(箭头函数没有构造函数)
 - 当想在对象字面是以将函数作为属性添加并在其中使用对象时，因为咱们无法访问 this 即对象本身。
 
+### 后续
+> 感谢阅读，后续会持续更新高级篇、vue/react篇、算法篇等面试知识点，这里感谢大家动动小手，关注不丢失，谢谢
