--- a/src/interview/必知必会之编码篇.md
+++ b/src/interview/必知必会之编码篇.md
@@ -209,9 +209,10 @@ console.log(a); // a is not defined
 
 ### 实现 const
 
+> 由于 ES5 环境没有 block 的概念，所以是无法百分百实现 const，只能是挂载到某个对象下，要么是全局的 window，要么就是自定义一个 object 来当容器
+
 ```javascript
 function _const(key, value) {
-  // 由于ES5环境没有block的概念，所以是无法百分百实现const，只能是挂载到某个对象下，要么是全局的window，要么就是自定义一个object来当容器
   window[key] = value;
   Object.defineProperty(window, key, {
     enumerable: false,
