算法练习迁移、jsx 实现 react

--- a/src/interview/重学前端.md
+++ b/src/interview/重学前端.md
@@ -36,8 +36,8 @@
 
 6. 为什么 `0.1 + 0.2` 不等于 `0.3`？
 
-```JavaScript
-console.log( 0.1 + 0.2 === 0.3); // false
+```javascript
+console.log(0.1 + 0.2 === 0.3); // false
 ```
 
 > 根据双精度浮点数的定义，Number 类型中有效的整数范围是 -0x1fffffffffffff 至 0x1fffffffffffff，所以 Number 无法精确表示此范围外的整数。同样根据浮点数的定义，非整数的 Number 类型无法用 ==（=== 也不行） 来比较：
@@ -45,9 +45,9 @@ console.log( 0.1 + 0.2 === 0.3); // false
 
 - 所以实际上，这里错误的不是结论，而是比较的方法，正确的比较方法是使用 JavaScript 提供的最小精度值：
 
-```JavaScript
+```javascript
 // 检查等式左右两边差的绝对值是否小于最小精度，才是正确的比较浮点数的方法。
-console.log( Math.abs(0.1 + 0.2 - 0.3) <= Number.EPSILON);
+console.log(Math.abs(0.1 + 0.2 - 0.3) <= Number.EPSILON);
 ```
 
 7. 为什么给对象添加的方法能用在基本类型上？
@@ -58,7 +58,7 @@ console.log( Math.abs(0.1 + 0.2 - 0.3) <= Number.EPSILON);
 > 2. Number、String 和 Boolean，三个构造器是两用的，当跟 new 搭配时，它们产生对象，当直接调用时，它们表示强制类型转换。
 > 3. Symbol 函数比较特殊，直接用 new 调用它会抛出错误，但它仍然是 Symbol 对象的构造器。
 
-```JavaScript
+```javascript
 console.log("abc".charAt(0)); //a
 
 Symbol.prototype.hello = () => console.log("hello");
@@ -81,7 +81,7 @@ a.hello(); // hello，有效
 - 每一类装箱对象皆有私有的 Class 属性，这些属性可以用 `Object.prototype.toString` 获取;
 - 在 JavaScript 中，没有任何方法可以更改私有的 Class 属性，因此 `Object.prototype.toString` 是可以准确识别对象对应的基本类型的方法，它比 `instanceof` 更加准确。
 
-```JavaScript
+```javascript
 var symbolObject = Object(Symbol("a"));
 console.log(Object.prototype.toString.call(symbolObject)); //[object Symbol]
 ```
@@ -96,20 +96,84 @@ console.log(Object.prototype.toString.call(symbolObject)); //[object Symbol]
 
 - 拆箱转换会尝试调用 `valueOf` 和 `toString` 来获得拆箱后的基本类型。如果 `valueOf` 和 `toString` 都不存在，或者没有返回基本类型，则会产生类型错误 TypeError。
 
-```JavaScript
+```javascript
 var o = {
-  valueOf: () => {console.log("valueOf"); return {}},
-  toString: () => {console.log("toString"); return {}}
-}
+  valueOf: () => {
+    console.log("valueOf");
+    return {};
+  },
+  toString: () => {
+    console.log("toString");
+    return {};
+  },
+};
 
 // Number 的转换  先 valueOf 再 toString
-o * 2 // TypeError
+o * 2; // TypeError
 
 // String 的转换则是 先 toString 再 valueOf
-String(o) // TypeError
+String(o); // TypeError
 
 // 在 ES6 之后，还允许对象通过显式指定 @@toPrimitive Symbol 来覆盖原有的行为。
-o[Symbol.toPrimitive] = () => {console.log("toPrimitive"); return "hello"}
+o[Symbol.toPrimitive] = () => {
+  console.log("toPrimitive");
+  return "hello";
+};
 // toPrimitive
-console.log(o + "")  // hello
+console.log(o + ""); // hello
 ```
+
+11. `try` 里面放 `return`，`finally` 还会执行吗？
+
+- `finally` 不管 `try`/`catch` 如何处理最终都会执行，并且如果 `finally` 中加入 `return`/`throw` 则会覆盖 `try`/`catch` 的 `return` 或者 `throw`;
+
+```javascript
+function foo() {
+  try {
+    return 0;
+  } catch (err) {
+  } finally {
+    // 这里会先执行
+    console.log("a");
+  }
+}
+
+console.log(foo());
+// a
+// 0
+```
+
+```javascript
+function foo() {
+  try {
+    i++;
+    return 0;
+  } catch (err) {
+    throw err;
+  } finally {
+    // 最终以 finally 为主
+    return 1;
+  }
+}
+
+console.log(foo()); // 1
+```
+
+12. 为什么 `12.toString` 会报错？
+
+- 这时候 `12.` 会被当作省略了小数点后面部分的数字，而单独看成一个整体，所以我们要想让点单独成为一个 `token`，就要加入空格，或者 .，这样写：`12 .toString()`/ `12..toString()`
+
+```text
+// 数字直接量
+.01
+12.
+12.01
+```
+
+> Token 词
+>
+> 1. IdentifierName 标识符名称，典型案例是我们使用的变量名，注意这里关键字也包含在内了。
+> 2. Punctuator 符号，我们使用的运算符和大括号等符号。
+> 3. NumericLiteral 数字直接量，就是我们写的数字。
+> 4. StringLiteral 字符串直接量，就是我们用单引号或者双引号引起来的直接量。
+> 5. Template 字符串模板，用反引号` 括起来的直接量。
