--- a/src/interview/重学前端.md
+++ b/src/interview/重学前端.md
@@ -177,3 +177,74 @@ console.log(foo()); // 1
 > 3. NumericLiteral 数字直接量，就是我们写的数字。
 > 4. StringLiteral 字符串直接量，就是我们用单引号或者双引号引起来的直接量。
 > 5. Template 字符串模板，用反引号` 括起来的直接量。
+
+13. 关于 `**` 乘方表达式？
+
+- `**` 运算是右结合的，因此 `2 ** 2 ** 3` 运算规则如下：
+
+```javascript
+2 ** (2 ** 3); // 256
+```
+
+- `-2` 这样的一元运算表达式，是不可以放入乘方表达式的，如果需要表达类似的逻辑，必须加括号。
+
+```javascript
+(++i) ** 30;
+2 ** 30; //正确
+// -2 ** 30 //报错
+(-2) ** 30;
+```
+
+14. 关于 `==` 的几个错觉？
+
+- 即使字符串与布尔值比较，也都要转换为数字
+
+```javascript
+false == "0"; // true
+true == "true"; // false
+```
+
+- 对象如果转换成了 primitive 类型跟等号另一边类型恰好相同，则不需要转换成数字。
+
+```javascript
+[] == "" // true
+[] == 0 // true
+[] == false // true
+```
+
+> 所以 `==` 比较坑，尽量还是使用 `===`，或者仅在确定字符串与数值比较时去使用 `==`
+
+15. 从输入 URL 到看到网页，经历了什么？
+
+- 浏览器首先使用 HTTP 协议或者 HTTPS 协议，向服务端请求页面；
+- 把请求回来的 HTML 代码经过解析，构建成 DOM 树；
+- 计算 DOM 树上的 CSS 属性；
+- 最后根据 CSS 属性对元素逐个进行渲染，得到内存中的位图；
+- 一个可选的步骤是对位图进行合成，这会极大地增加后续绘制的速度；
+- 合成之后，再绘制到界面上。
+
+16. HTTP1.1/HTTP2/HTTPS 区别？
+
+- HTTP2 相比于 HTTP1.1
+
+  > 总的来说 HTTP2 大幅度的提升了 web 性能。在与 HTTP/1.1 完全语义兼容的基础上，进一步减少了网络延迟，在性能上大幅提升。
+
+  1. 服务端推送：能够在客户端发送第一个请求到服务端时，提前把一部分内容推送给客户端，放入缓存当中，这可以避免客户端请求顺序带来的并行度不高，从而导致的性能问题。
+  2. TCP 连接复用，则使用同一个 TCP 连接来传输多个 HTTP 请求，避免了 TCP 连接建立时的三次握手开销，和初建 TCP 连接时传输窗口小的问题。
+  3. 二进制分帧
+
+  - 单连接多资源的方式，减少服务端的链接压力,内存占用更少,连接吞吐量更大
+  - 由于 TCP 连接的减少而使网络拥塞状况得以改善，同时慢启动时间的减少,使拥塞和丢包恢复速度更快
+
+  > 在二进制分帧层中， HTTP/2 会将所有传输的信息分割为更小的消息和帧（frame）,并对它们采用二进制格式的编码 ，其中 HTTP1.x 的首部信息会被封装到 HEADER frame，而相应的 Request Body 则封装到 DATA frame 里面。\
+  > HTTP/2 通信都在一个连接上完成，这个连接可以承载任意数量的双向数据流。\
+  > 在过去， HTTP 性能优化的关键并不在于高带宽，而是低延迟。TCP 连接会随着时间进行自我「调谐」，起初会限制连接的最大速度，如果数据成功传输，会随着时间的推移提高传输的速度。这种调谐则被称为 TCP 慢启动。由于这种原因，让原本就具有突发性和短时性的 HTTP 连接变的十分低效。\
+  > HTTP/2 通过让所有数据流共用同一个连接，可以更有效地使用 TCP 连接，让高带宽也能真正的服务于 HTTP 的性能提升。
+
+  4. 首部压缩
+
+  > HTTP/1.1 并不支持 HTTP 首部压缩，为此 SPDY 和 HTTP/2 应运而生， SPDY 使用的是通用的 算法，而 HTTP/2 则使用了专门为首部压缩而设计的 HPACK 算法。
+
+- HTTPS 有两个作用，一是确定请求的目标服务端身份，二是保证传输的数据不会被网络中间节点窃听或者篡改。
+
+> HTTPS 是使用加密通道来传输 HTTP 的内容。但是 HTTPS 首先与服务端建立一条 TLS 加密通道。TLS 构建于 TCP 协议之上，它实际上是对传输的内容做一次加密，所以从传输内容上看，HTTPS 跟 HTTP 没有任何区别。
