--- a/src/interview/重学前端.md
+++ b/src/interview/重学前端.md
@@ -2,7 +2,7 @@
 
 1. 为什么有的编程规范要求用 `void 0` 代替 `undefined`？
 
-   > `JavaScript` 的代码 `undefined` 是一个变量，而并非是一个关键字，这是 `JavaScript` 语言公认的设计失误之一，所以，我们为了避免无意中被篡改，建议使用 `void 0` 来获取 `undefined` 值。
+> `JavaScript` 的代码 `undefined` 是一个变量，而并非是一个关键字，这是 `JavaScript` 语言公认的设计失误之一，所以，我们为了避免无意中被篡改，建议使用 `void 0` 来获取 `undefined` 值。
 
 2. `Undefined` 和 `Null` 的区别
 
@@ -248,3 +248,123 @@ true == "true"; // false
 - HTTPS 有两个作用，一是确定请求的目标服务端身份，二是保证传输的数据不会被网络中间节点窃听或者篡改。
 
 > HTTPS 是使用加密通道来传输 HTTP 的内容。但是 HTTPS 首先与服务端建立一条 TLS 加密通道。TLS 构建于 TCP 协议之上，它实际上是对传输的内容做一次加密，所以从传输内容上看，HTTPS 跟 HTTP 没有任何区别。
+
+17. `['1', '2', '3'].map(parseInt)` 输出什么？
+
+- 乍一看可能会说出 `[1, 2, 3]`，其实不然，答案是`[1, NaN, NaN]`
+
+```javascript
+["1", "2", "3"].map(parseInt);
+
+// parseInt(string, radix) 接收2个参数，(要处理的值, 解析时的基数)
+// 基数是一个介于2和36之间的整数
+
+// 平铺一下
+["1", "2", "3"].map((item, idx) => parseInt(item, idx));
+
+parseInt("1", 0); // 1 radix为 0时该值无效，且第一个参数不以“0x”和“0”开头时，按照10为基数处理。这个时候返回1
+parseInt("2", 1); // NaN 当radix小于2并且大于36或第一个参数的第一个非空格字符不能转换为数字。
+parseInt("3", 2); // NaN 基数为2（2进制）表示的数中，最大值小于3，所以无法解析，返回NaN
+```
+
+18. Set/Map/WeakSet/WeakMap 区别？
+
+- Set
+
+> 1. 成员不能重复
+> 2. 只有健值，没有健名，有点类似数组。
+> 3. 可以遍历，方法有 add, delete, has
+
+- WeakSet
+
+> 1. 只能储存对象引用，不能存放值，而 Set 对象都可以
+> 2. 成员都是弱引用，即垃圾回收机制不考虑 WeakSet 对该对象的应用，随时可以消失。可以用来保存 DOM 节点，不容易造成内存泄漏
+> 3. 不能遍历，方法有 add, delete, has
+
+- Map
+
+> 1. 本质上是健值对的集合，类似集合
+> 2. 可以遍历，方法很多，方便跟各种数据格式进行转换
+
+- WeakMap
+
+> 1. 直接受对象作为健名（null 除外），不接受其他类型的值作为健名
+> 2. 健名所指向的对象，不计入垃圾回收机制
+> 3. 不能遍历，方法同 get, set, has, delete
+
+19. 描述下 es5/es6 继承的区别？
+
+- `class` 的声明没有被变量提升，类似 `let/const` 的声明，不能前置使用；
+
+```javascript
+var t = new Test(); // Test is not defined
+class Test {}
+```
+
+- `class` 声明内部会启用严格模式
+
+```javascript
+class Test {
+  constructor() {
+    empty = "test"; // empty is not defined
+  }
+}
+```
+
+- `class` 的所有方法（包括静态方法和实例方法）都是不可枚举的
+
+```javascript
+class Text {
+  constructor() {
+    this.a = 1;
+  }
+  func1() {}
+  func2() {}
+}
+console.log(Object.keys(Text)); // []
+console.log(Object.keys(Text.prototype)); // []
+Object.keys(new Text()); // ['a']
+
+function Func() {
+  this.a = 1;
+  this.fun1 = function () {};
+  this.fun2 = function () {};
+}
+Func.prototype.func3 = function () {};
+console.log(Object.keys(Func)); // []
+console.log(Object.keys(Func.prototype)); // ['func3']
+Object.keys(new Func()); // ['a', 'func1', 'func2']
+```
+
+- `class` 的所有方法（包括静态方法和实例方法）都没有原型对象 `prototype`，所以也没有 `constructor`，不能使用 new 来调用其方法
+
+```javascript
+var a = new Text();
+new a.func1(); // a.test is not a constructor
+```
+
+- 必须使用 `new` 调用 `class`
+
+```javascript
+Text(); // Class constructor A cannot be invoked without 'new'
+new Text();
+```
+
+20. 简述下浏览器的渲染过程？
+
+- 解析 HTML，生成 DOM 树，解析 CSS，生成 CSSOM 树
+- 将 DOM 树和 CSSOM 树结合，生成渲染树(Render Tree)
+
+> 构建渲染树：
+>
+> 1. 从 DOM 树的根节点开始遍历每个可见节点。
+> 2. 对于每个可见的节点，找到 CSSOM 树中对应的规则，并应用它们。
+> 3. 根据每个可见节点以及其对应的样式，组合生成渲染树。
+
+- Layout(回流):根据生成的渲染树，进行回流(Layout)，得到节点的几何信息（位置，大小）
+- Painting(重绘):根据渲染树以及回流得到的几何信息，得到节点的绝对像素
+- Display:将像素发送给 GPU，展示在页面上。（这一步其实还有很多内容，比如会在 GPU 将多个合成层合并为同一个层，并展示在页面中。而 css3 硬件加速的原理则是新建合成层，这里我们不展开，之后有机会会写一篇博客）
+
+![浏览器渲染过程](./images/浏览器渲染过程.png)
+
+21. 回流和重绘？
