--- a/src/interview/重学前端.md
+++ b/src/interview/重学前端.md
@@ -368,3 +368,142 @@ new Text();
 ![浏览器渲染过程](./images/浏览器渲染过程.png)
 
 21. 回流和重绘？
+
+- 重绘：由于节点的几何属性发生改变或者由于样式发生变化而不影响布局的成为重绘。
+
+> 例如 outline, visibility, color、background-color 等，重绘的代价是高昂的，因为浏览器必须验证 DOM 树上其他节点元素的可见性。
+
+- 回流：回流是布局或者几何属性需要改变就称为回流。回流是影响浏览器性能的关键因素，因为其变化涉及到部分页面（或是整个页面）的布局更新。一个元素的回流可能会导致了其所有子元素以及 DOM 中紧随其后的节点、祖先节点元素的随后的回流。
+
+> 大部分的回流将导致页面的重新渲染，回流必定会导致重绘，但是，重绘不一定会引发回流
+
+22. 如何优化重绘重排？
+
+- 1.浏览器优化
+
+> 现代浏览器大多都是通过`队列机制`来批量更新布局，浏览器会把修改操作放在队列中，至少一个浏览器刷新（即 16.6ms）才会清空队列，但当你获取布局信息的时候，队列中可能有会影响这些属性或方法返回值的操作，即使没有，浏览器也会`强制清空队列`，触发回流与重绘来确保返回正确的值。
+>
+> 以下属性或方法的使用都会强制刷新队列，应避免频繁使用：
+>
+> 1. offsetTop、offsetLeft、offsetWidth、offsetHeight
+> 2. scrollTop、scrollLeft、scrollWidth、scrollHeight
+> 3. clientTop、clientLeft、clientWidth、clientHeight
+> 4. width、height
+> 5. getComputedStyle()
+> 6. getBoundingClientRect()
+
+- 2.减少重绘与回流
+
+> 1. 使用 transform 替代 to
+> 2. 使用 visibility 替换 display: none ，因为前者只会引起重绘，后者会引发回流（改变了布局)
+> 3. 避免使用 table 布局，可能很小的一个小改动会造成整个 table 的重新布局。
+> 4. 尽可能在 DOM 树的最末端改变 class，回流是不可避免的，但可以减少其影响。尽可能在 DOM 树的最末端改变 class，可以限制了回流的范围，使其影响尽可能少的节点。
+> 5. 避免设置多层内联样式，CSS 选择符从右往左匹配查找，避免节点层级过多。
+> 6. 将动画效果应用到 position 属性为 absolute 或 fixed 的元素上，避免影响其他元素的布局，这样只是一个重绘，而不是回流，同时，控制动画速度可以选择 requestAnimationFrame
+> 7. 避免使用 CSS 表达式，可能会引发回流。
+> 8. 将频繁重绘或者回流的节点设置为图层，图层能够阻止该节点的渲染行为影响别的节点，例如 will-change、video、iframe 等标签，浏览器会自动将该节点变为图层。
+> 9. CSS3 硬件加速（GPU 加速），使用 css3 硬件加速，可以让 transform、opacity、filters 这些动画不会引起回流重绘 。但是对于动画的其它属性，比如 background-color 这些，还是会引起回流重绘的，不过它还是可以提升这些动画的性能。
+> 10. 避免频繁操作样式，最好一次性重写 style 属性，或者将样式列表定义为 class 并一次性更改 class 属性。
+> 11. 避免频繁操作 DOM，创建一个 documentFragment，在它上面应用所有 DOM 操作，最后再把它添加到文档中。
+> 12. 避免频繁读取会引发回流/重绘的属性，如果确实需要多次使用，就用一个变量缓存起来。
+> 13. 对具有复杂动画的元素使用绝对定位，使它脱离文档流，否则会引起父元素及后续元素频繁回流。
+
+23. 介绍下 js 的模块化？
+
+- Commonjs(2009)：号召规范服务端的 js 接口，形成了 ServerJs 规范（即 CommonJs）CommonJS 内的模块规范成为了 Node.js 的标准实现规范
+
+```javascript
+// file module.js
+// 对外输出
+module.exports = {
+  a: 1,
+  b: 2,
+};
+
+// file test.js  引入一个模块
+var test = require("module.js").a; // 1
+```
+
+- AMD(2009)：js 模块的异步加载 ，`require.js`、`curl` 是其对应实现
+
+> 1. 源自 CommonJS，但是 异步的加载的
+> 2. 模块下载完后，立即执行加载，所有模块加载完毕进入回调
+> 3. 随着以 npm (遵循 CommonJS 规范)为主导的依赖管理机制的统一，越来越多的开发者放弃了使用 AMD 模式。
+
+```javascript
+// file module.js  定义一个模块
+define(function () {
+  return {
+    a: 1,
+    b: 2,
+  };
+});
+
+// file hello.js  引入一个模块
+define(["./module.js"], function (module) {
+  console.log(module.a, module.b);
+});
+```
+
+- UMD(2011)：为了支持一个模块同时兼容 AMD 和 CommonJs 规范，适用于 同时支持浏览器端和服务端引用的第三方库，提出了 UMD 规范
+
+```javascript
+// 定义一个模块
+(function (root, factory) {
+  if (typeof define === "function" && define.amd) {
+    // AMD
+    define(["jquery", "underscore"], factory);
+  } else if (typeof exports === "object") {
+    // Node, CommonJS之类的
+    module.exports = factory(require("jquery"), require("underscore"));
+  } else {
+    // 浏览器全局变量(root 即 window)
+    root.returnExports = factory(root.jQuery, root._);
+  }
+})(this, function ($, _) {
+  //    方法
+  function a() {} //    私有方法，因为它没被返回 (见下面)
+  function b() {} //    公共方法，因为被返回了
+  function c() {} //    公共方法，因为被返回了
+
+  //    暴露公共方法
+  return {
+    b: b,
+    c: c,
+  };
+});
+```
+
+- CMD(2011)：`require.js` 需要提前声明 所依赖的库，为了做到 看起来"使用时才加载"（就近依赖），创造了 sea.js，同时其对应 CMD 规范，下载完后，并不立即执行，回调函数中遇到 require 才执行加载模块
+
+```javascript
+// 定义一个模块
+define(function (require, exports, module) {
+  //  ....
+});
+
+//sea.js:
+define(function (require, exports, module) {
+  var mod_A = require("dep_A");
+  var mod_B = require("dep_B");
+  var mod_C = require("dep_C");
+});
+```
+
+- ES2015 Modules(2015)：导入的值也是只读不可变对象（丧失了 CommonJS 的修改特性，但也是一个优点，保证了 ES6 Modules 的依赖关系是确定（Deterministic）的，和运行时的状态无关，从而也就保证了 ES6 Modules 是可以进行可靠的静态分析的。），不像 CommonJS 是一个内存的拷贝
+
+```javascript
+// file module.js
+export const a = 1;
+export function b (){
+
+}
+export default {
+  c: 3
+}
+
+// file test.js
+import {a, b}, c  from './module.js'
+```
+
+24. 
