--- a/src/vue/4.vue3升级指南.md
+++ b/src/vue/4.vue3升级指南.md
@@ -112,8 +112,7 @@ import { createApp, nextTick, reactive, version, compile, computed } from "vue";
 // ...
 ```
 
-- 内部编译对比
-  > 除了公共 api，许多内部组件/帮助器现在也被导出为命名导出，只有当编译器的输出是这些特性时，才允许编译器导入这些特性
+> 内部编译对比：除了公共 api，许多内部组件/帮助器现在也被导出为命名导出，只有当编译器的输出是这些特性时，才允许编译器导入这些特性
 
 ```html
 <transition>
@@ -124,6 +123,7 @@ import { createApp, nextTick, reactive, version, compile, computed } from "vue";
 > 编译后
 
 ```javascript
+// treeshaking 友好
 import { h, Transition, withDirectives, vShow } from "vue";
 
 export function render() {
