--- a/src/basis/ES7-11中的更新.md
+++ b/src/basis/ES7-11中的更新.md
@@ -758,21 +758,288 @@ arr1.flatMap(x => [[x * 2]]);
 
 ### ES9新特性（2018发布）
 
-#### [Lifting template literal restriction](https://github.com/tc39/proposal-template-literal-revision)
+#### [非法转义序列的修订（Lifting template literal restriction）](https://github.com/tc39/proposal-template-literal-revision)
 
-#### [`s` (`dotAll`) flag for regular expressions](https://github.com/tc39/proposal-regexp-dotall-flag)
+> #### ES2018关于非法转义序列的修订:
+>
+> 带标签的模版字符串应该允许嵌套支持常见转义序列的语言（例如[DSLs](https://en.wikipedia.org/wiki/Domain-specific_language)、[LaTeX](https://en.wikipedia.org/wiki/LaTeX)）。ECMAScript提议[模版字面量修订](https://tc39.github.io/proposal-template-literal-revision/)(第4阶段，将要集成到ECMAScript 2018标准) 移除对ECMAScript在带标签的模版字符串中转义序列的语法限制。
 
-#### [RegExp named capture groups](https://github.com/tc39/proposal-regexp-named-groups)
+```javascript
+function latex(str) { 
+ return { "cooked": str[0], "raw": str.raw[0] }
+} 
+
+latex`\unicode`
+
+// 较老版本 es2016或更早
+// SyntaxError: malformed Unicode character escape sequence
+
+// es2018
+// { cooked: undefined, raw: "\\unicode" }
+```
+
+- 值得注意的是，这一转义序列限制只对带标签的模板字面量移除，而不包括不带标签的模板字面量：
+
+```javascript
+let bad = `bad escape sequence: \unicode`; // 报错 Uncaught SyntaxError: Invalid Unicode escape sequence
+```
+
+#### [正则表达式`\s` or (`dotAll`) ](https://github.com/tc39/proposal-regexp-dotall-flag)
+
+> 正则表达式中点`.`匹配除回车外的任何单字符，标记`s`改变这种行为，允许行终止符的出现.
+
+```javascript
+/foo.bar/.test('foo\nbar');
+// → false
+
+/foo.bar/s.test('foo\nbar');
+// → true
+```
+
+- `dotAll`：**`dotAll`** 属性表明是否在正则表达式中一起使用"`s`"修饰符（引入/s修饰符，使得.可以匹配任意单个字符）。`dotAll` 是一个只读的属性，属于单个正则表达式实例。
+
+```javascript
+const re = /foo.bar/s; // Or, `const re = new RegExp('foo.bar', 's');`.
+re.test('foo\nbar');
+// → true
+re.dotAll
+// → true
+re.flags
+// → 's'
+```
+
+- 兼容性
+
+![](./images/dotAll_broswer.png)
+
+#### [正则表达式命名捕获组（RegExp named capture groups）](https://github.com/tc39/proposal-regexp-named-groups)
+
+> ES2018允许命名捕获组使用符号`?<name>`，在打开捕获括号`(`后立即命名，示例如下：
+>
+> 任何匹配失败的命名组都将返回`undefined`。
+
+- `exec`
+
+```javascript
+let re = /(?<year>\d{4})-(?<month>\d{2})-(?<day>\d{2})/u;
+let result = re.exec('2015-01-02');
+// result.groups.year === '2015';
+// result.groups.month === '01';
+// result.groups.day === '02';
+
+// result[0] === '2015-01-02';
+// result[1] === '2015';
+// result[2] === '01';
+// result[3] === '02';
+```
+
+- `replace`
+
+```javascript
+let re = /(?<year>\d{4})-(?<month>\d{2})-(?<day>\d{2})/u;
+let result = '2015-01-02'.replace(re, '$<day>/$<month>/$<year>');
+// result === '02/01/2015'
+```
 
 #### [Rest/Spread Properties](https://github.com/tc39/proposal-object-rest-spread)
 
-#### [RegExp Lookbehind Assertions](https://github.com/tc39/proposal-regexp-lookbehind)
+> ES2015引入了[Rest参数](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Functions/Rest_parameters)和[扩展运算符](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Operators/Spread_syntax)。三个点（...）仅用于数组。Rest参数语法允许我们将一个不定数量的参数表示为一个数组。
 
-#### [RegExp Unicode Property Escapes](https://github.com/tc39/proposal-regexp-unicode-property-escapes)
+```javascript
+// es2015 
+restFunc(1, 2, 3, 4, 5);
+
+function restFunc(arg1, arg2, ...arg3) {
+  // arg1 = 1
+  // arg2 = 2
+  // arg3 = [3, 4, 5]
+}
+
+// 展开属性
+const arr = [1, 4, -1, 5, 9];
+console.log(Math.max(...values)); // 9
+```
+
+> ES2018为对象解构提供了和数组一样的Rest参数和(...)展开操作符
+
+- rest 属性
+
+```javascript
+let { x, y, ...z } = { x: 1, y: 2, a: 3, b: 4 };
+x; // 1
+y; // 2
+z; // { a: 3, b: 4 }
+```
+
+- 展开 属性
+
+```javascript
+let n = { x, y, ...z };
+n; // { x: 1, y: 2, a: 3, b: 4 }
+```
+
+#### [RegExp反向断言（RegExp Lookbehind Assertions）](https://github.com/tc39/proposal-regexp-lookbehind)
+
+- 正向断言（`?<=...`），它们确保包含在其中的模式位于声明之后的模式之前
+
+```javascript
+// 匹配金额
+/(?<=\$)\d+(\.\d*)?/.exec('$10.53');
+// [10.53 ...]
+/(?<=\$)\d+(\.\d*)?/.exec('￥10.53');
+// null
+```
+
+- 反向断言（`?<!...`），另一方面，请确保其中的模式不在该断言之后的模式之前
+
+```javascript
+/(?<!\$)\d+(?:\.\d*)/.exec('$10.53')
+// [0.53 ...]
+
+/(?<!\$)\d+(?:\.\d*)/.exec('￥10.53')
+// [10.53 ...]
+```
+
+#### [Unicode属性在正则表达式中转义（RegExp Unicode Property Escapes）](https://github.com/tc39/proposal-regexp-unicode-property-escapes)
+
+> es2018之前，在正则表达式中本地访问 Unicode 字符属性是不被允许的。
+>
+> ES2018添加了 Unicode 属性转义——形式为`\p{...}`和`\P{...}`，在正则表达式中使用标记 `u` (unicode) 设置，在`\p`块儿内，可以以键值对的方式设置需要匹配的属性而非具体内容。
+
+```javascript
+const regex = /^\p{Decimal_Number}+$/u;
+regex.test('𝟏𝟐𝟑𝟜𝟝𝟞𝟩𝟪𝟫𝟬𝟭𝟮𝟯𝟺𝟻𝟼');
+// → true
+
+const regex = /^\P{Decimal_Number}+$/u;
+regex.test('Իմ օդաթիռը լի է օձաձկերով');
+// → true
+
+const regex = /^\p{Number}+$/u;
+regex.test('²³¹¼½¾𝟏𝟐𝟑𝟜𝟝𝟞𝟩𝟪𝟫𝟬𝟭𝟮𝟯𝟺𝟻𝟼㉛㉜㉝ⅠⅡⅢⅣⅤⅥⅦⅧⅨⅩⅪⅫⅬⅭⅮⅯⅰⅱⅲⅳⅴⅵⅶⅷⅸⅹⅺⅻⅼⅽⅾⅿ');
+// → true
+```
 
 #### [`Promise.prototype.finally`](https://github.com/tc39/proposal-promise-finally)
 
-#### [Asynchronous Iteration](https://github.com/tc39/proposal-async-iteration)
+> `finally()` 方法返回一个[`Promise`](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Promise)。在promise结束时，无论结果是fulfilled或者是rejected，都会执行指定的回调函数。这为在`Promise`是否成功完成后都需要执行的代码提供了一种方式。
+>
+> 这避免了同样的语句需要在[`then()`](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Promise/then)和[`catch()`](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Promise/catch)中各写一次的情况。
+>
+> **注意:** 在`finally`回调中 `throw`（或返回被拒绝的promise）将以 `throw()` 指定的原因拒绝新的promise.
+
+- `finally()` 虽然与 `.then(onFinally, onFinally)` 类似，它们不同的是:
+  - 调用内联函数时，不需要多次声明该函数或为该函数创建一个变量保存它。
+  - 由于无法知道`promise`的最终状态，所以`finally`的回调函数中不接收任何参数，它仅用于无论最终结果如何都要执行的情况。
+  - 与`Promise.resolve(2).then(() => {}, () => {})` （resolved的结果为`undefined`）不同，`Promise.resolve(2).finally(() => {})` resolved的结果为 `2`。
+  - 同样，`Promise.reject(3).then(() => {}, () => {})` (resolved 的结果为`undefined`), `Promise.reject(3).finally(() => {})` rejected 的结果为 `3`。
+- 基本使用
+
+```javascript
+let isLoading = true;
+
+fetch(myRequest).then(function(response) {
+    var contentType = response.headers.get("content-type");
+    if(contentType && contentType.includes("application/json")) {
+      return response.json();
+    }
+    throw new TypeError("Oops, we haven't got JSON!");
+  })
+  .then(function(json) { /* process your JSON further */ })
+  .catch(function(error) { console.log(error); })
+  .finally(function() { isLoading = false; });
+```
+
+- 兼容性
+
+![](./images/finally_broswer.png)
+
+#### [异步迭代器（Asynchronous Iteration）](https://github.com/tc39/proposal-async-iteration)
+
+> es2018引入异步迭代器`for-await-of`，使得`await`可以和`for...of`循环一起使用，以串行的方式运行异步操作。
+>
+> **`for await...of` 语句**会在异步或者同步可迭代对象上创建一个迭代循环，包括 [`String`](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/String)，[`Array`](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Array)，`Array`-like 对象（比如[`arguments`](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Functions/arguments) 或者[`NodeList`](https://developer.mozilla.org/zh-CN/docs/Web/API/NodeList))，[`TypedArray`](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/TypedArray)，[`Map`](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Map)， [`Set`](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Set)和自定义的异步或者同步可迭代对象。其会调用自定义迭代钩子，并为每个不同属性的值执行语句**。**像[`await`](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/await)表达式一样，这个语句只能在 [async function](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Statements/async_function)内使用。
+
+- es2018之前，错误场景案例
+
+> 在`async/await`的某些时刻，你可能尝试在同步循环中调用异步函数。
+
+```javascript
+// 以下方法循环本身依旧同步，并且会在内部异步函数完成之前全部调用完成
+async function process(array) {
+  for (let i of array) {
+    await doSomething(i);
+  }
+}
+async function process(array) {
+  array.forEach(async i => {
+    await doSomething(i);
+  });
+}
+```
+
+- 基本使用
+
+```javascript
+async function process(array) {
+  for await (let i of array) {
+    doSomething(i);
+  }
+}
+```
+
+- 迭代异步可迭代对象
+
+```javascript
+var asyncIterable = {
+  [Symbol.asyncIterator]() {
+    return {
+      i: 0,
+      next() {
+        if (this.i < 3) {
+          return Promise.resolve({ value: this.i++, done: false });
+        }
+
+        return Promise.resolve({ done: true });
+      }
+    };
+  }
+};
+
+(async function() {
+   for await (num of asyncIterable) {
+     console.log(num);
+   }
+})();
+
+// 0
+// 1
+// 2
+```
+
+- 迭代异步生成器
+
+```js
+async function* asyncGenerator() {
+  var i = 0;
+  while (i < 3) {
+    yield i++;
+  }
+}
+
+(async function() {
+  for await (num of asyncGenerator()) {
+    console.log(num);
+  }
+})();
+// 0
+// 1
+// 2
+```
+
+- 兼容性
+
+![](./images/for_await_of_broswer.png)
 
 ### ES8新特性（2017发布）
 
